# augene

./: .gitignore  .gitmodules  README.md  augene.jucer  build-lv2-plugin-host.sh  build.sh
Source/: ApplicationCommands.cpp  ApplicationCommands.h  ApplicationDialogManager.cpp  ApplicationDialogManager.h  AugeneMainComponent.h  AugeneModel.cpp  AugeneModel.h  AugeneProject.h  Main.cpp  MainMenuModel.h
Source/Model/: AugeneProject.h
augene-old/: build.sh
augene-old/Source/: Main.cpp
augene-old/Source/Model/: AugeneModel.h  AugeneProject.cpp
augene-old/Source/Views/: ApplicationDialogManager.h  AugeneMainComponent.h
augene-player/: AugenePlayer.jucer  CMakeLists.txt  README-CMAKE.md  augene-player.jucer  build-osx.sh  build.sh
augene-player/Source/: Main.cpp  MainComponent.cpp  MainComponent.h
juce-modules/augene_file_watcher/: .gitignore  augene_file_watcher.cpp  augene_file_watcher.h  rewrite.sh
